--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robin Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+
+    font-family: 'Poppins', sans-serif;
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-widht">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Robin Roy</span> world !</h1>
+            <h3>Bulid Climber and train Stopper</h3>
+            <p>My name is Robin Roy. I am a good student and i am a webdaplopar.
+                i am hart working and i am a god boy friend my father name is Kamini Barman
+                and he is a good farmer.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
+        </div>
+        <div class="half-widht">
+            <img src="images/robin-bg.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
