--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
             <img src="images/robin-bg.png" alt="">
         </div>
     </section>
+    <section class="drem-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-widht">
+            <h1>Driam Big</h1>
+            <h2>Bacome a web Developer</h2>
+            <p>My name is robin Roy he is a student his father his mother ..iam a web developer .i love my sister and my
+                sister loves me.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 
 </body>
 
